2007-07-25  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HILDON_DEPENDS): Remove clinkcav, hildon-base-lib and
	hildon-status-bar-lib. Replace libossomime with libhildonmime,
	hildon-fm with hildon-fm-2, libhildonmenu with libhildondesktop and
	hildon-libs with hildon-1.

2007-06-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (launch_process): Move load_prog after adjusting
	the process priority and oom_adj values.

2007-03-08  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/booster.pc.in (exec_prefix): New variable.
	(pkglibdir): New variable.
	(pkgincludedir): Renamed to ...
	(includedir): ... this. Fix all users.

2007-03-08  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.1.in: Update the '--booster' option to mention
	that it supports multiple boosters now.

2007-03-08  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/booster_api.h: When included from C++ declare as extern C.

2007-03-08  Johannes Schmid <johannes.schmid@openismus.com>,
	    Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (AC_CONFIG_FILES): Generate maemo-launcher-booster.pc.
	* launcher/Makefile.am (pkgconfigdir): New variable.
	(dist_pkgconfig_DATA): Likewise.
	* launcher/booster.pc.in: New file.

2007-03-07  Johannes Schmid <johannes.schmid@openismus.com>,
	    Guillem Jover  <guillem.jover@nokia.com>

	* launcher/booster.h (LAUNCHER_BOOSTER_H): Renamed to ...
	(BOOSTER_H): ... this.
	(booster_module_load): Remove declaration.
	(boosters_alloc): New function declaration.
	(boosters_load): Likewise.
	(boosters_init): Likewise.
	(boosters_reload): Likewise.
	(booster_api_t, booster_state_t, BOOSTER_API_VERSION): Move ...
	* launcher/booster_api.h: ... here. New file.
	* launcher/booster.c (booster_new): New function.
	(boosters_alloc): Likewise.
	(boosters_load): Likewise.
	(boosters_init): Likewise.
	(boosters_reload): Likewise.
	* launcher/Makefile.am (maemo_launcherdir): New variable.