@@ -30,6 +30,7 @@ Description: Maemo Launcher for GTK applications - debugging symbols
 
 Package: maemo-launcher-dev
 Architecture: all
+Depends: debhelper (>= 4)
 Description: Maemo Launcher for GTK applications - development files
  Maemo Launcher for any gtk+ application. Tries to reduce startup time by
  pre-initializing the state of some libraries and then dynamically loading
