@@ -1,3 +1,3 @@
-usr/bin
+usr/bin/maemo-*
 usr/lib/maemo-launcher
-usr/share
+usr/share/man/man1/maemo-*
