@@ -6,6 +6,8 @@
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
+POD2MAN := pod2man -c maemo-launcher
+
 CFLAGS = -g -Wall
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
@@ -38,6 +40,9 @@ build: config.status
 	dh_testdir
 	
 	$(MAKE)
+	
+	$(POD2MAN) $(CURDIR)/debian/dh_maemolauncher > \
+	           $(CURDIR)/debian/dh_maemolauncher.1
 
 clean:
 	dh_testdir
@@ -55,6 +60,11 @@ install: build
 	dh_installdirs -a
 	
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
+	
+	cp $(CURDIR)/debian/dh_maemolauncher \
+	   $(CURDIR)/debian/tmp/usr/bin
+	cp $(CURDIR)/debian/dh_maemolauncher.1 \
+	   $(CURDIR)/debian/tmp/usr/share/man/man1/
 
 binary-indep: build install
 	dh_testdir
