@@ -1,0 +1,10 @@
+#
+# $Id$
+#
+
+Name: maemo-launcher-app
+Description: maemo-launcher application startup accelerator
+Version: @VERSION@
+Libs: -shared @PIC@ -export-dynamic
+Cflags: -shared @PIC@
+
